[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "streamfield"
dist-name = "ds-django-streamfield"
author = "Digismoothie"
author-email = ""
home-page = "https://github.com/digismoothie/django-streamfield"
description-file = "README.md"
classifiers=[
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Framework :: Django"
]
