[tool.poetry]
name = "ds-django-streamfield"
version = "0.1.1"
description = ""
authors = [
    "Digismoothie s.r.o. <info@digismoothie.com>",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/digismoothie/django-streamfield"
include = [
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
